@@ -1,19 +1,18 @@
 package io.github.redwallhp.villagerutils.commands.vtrade;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import org.bukkit.ChatColor;
+import java.util.stream.Stream;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.NamedTextColor;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
-import org.bukkit.inventory.MerchantRecipe;
-
+import io.github.redwallhp.villagerutils.TradeDraft;
 import io.github.redwallhp.villagerutils.VillagerUtils;
 import io.github.redwallhp.villagerutils.commands.AbstractCommand;
+import org.jetbrains.annotations.NotNull;
 
 public class GivesXPVtradeCommand extends AbstractCommand implements TabCompleter {
 
@@ -33,17 +32,16 @@ public class GivesXPVtradeCommand extends AbstractCommand implements TabComplete
 
     @Override
     public boolean action(CommandSender sender, String[] args) {
-        if (!(sender instanceof Player)) {
-            sender.sendMessage(ChatColor.RED + "Console cannot edit villagers.");
+        if (!(sender instanceof Player player)) {
+            sender.sendMessage(Component.text("Console cannot edit villagers.", NamedTextColor.RED));
             return false;
         }
-        Player player = (Player) sender;
         if (!plugin.getWorkspaceManager().hasWorkspace(player)) {
-            player.sendMessage(ChatColor.RED + "You do not have a villager trade loaded. Use '/vtrade new' to start one.");
+            player.sendMessage(Component.text("You do not have a villager trade loaded. Use '/vtrade new' to start one.", NamedTextColor.RED));
             return false;
         }
         if (args.length != 1) {
-            player.sendMessage(ChatColor.RED + "Invalid arguments. Usage: " + getUsage());
+            player.sendMessage(Component.text("Invalid arguments. Usage: " + getUsage(), NamedTextColor.RED));
             return false;
         }
 
@@ -56,25 +54,23 @@ public class GivesXPVtradeCommand extends AbstractCommand implements TabComplete
             value = true;
             break;
         default:
-            sender.sendMessage(ChatColor.RED + "The <given> argument must be true or false.");
+            sender.sendMessage(Component.text("The <given> argument must be true or false.", NamedTextColor.RED));
             return false;
         }
 
-        MerchantRecipe recipe = plugin.getWorkspaceManager().getWorkspace(player);
-        recipe.setExperienceReward(value);
-        player.sendMessage(ChatColor.DARK_AQUA + "This trade will" + (value ? "" : " not") + " give experience.");
+        TradeDraft draft = plugin.getWorkspaceManager().getWorkspace(player);
+        draft.setGivesXp(value);
+        player.sendMessage(Component.text("This trade will" + (value ? "" : " not") + " give experience.", NamedTextColor.DARK_AQUA));
         return true;
     }
 
     @Override
-    public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
-        if (args.length == 2) {
-            return Arrays.asList("false", "true").stream()
-            .filter(completion -> completion.startsWith(args[1].toLowerCase()))
-            .collect(Collectors.toList());
-        } else {
-            return Collections.emptyList();
+    public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, String[] args) {
+        if (args.length == 1) {
+            return Stream.of("false", "true")
+                    .filter(option -> option.startsWith(args[0].toLowerCase()))
+                    .toList();
         }
+        return Collections.emptyList();
     }
-
 }
